kubernetes/notes-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes-db
  namespace: secure-notes
  labels:
    app: notes-db
spec:
  ports:
  - port: 5432
    name: postgres
  clusterIP: None
  selector:
    app: notes-db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: notes-db
  namespace: secure-notes
spec:
  selector:
    matchLabels:
      app: notes-db
  serviceName: "notes-db"
  replicas: 1
  template:
    metadata:
      labels:
        app: notes-db
    spec:
      containers:
      - name: postgres
        image: postgres:16
        ports:
        - containerPort: 5432
          name: postgres
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 1Gi
        volumeMounts:
        - name: pgdata
          mountPath: /var/lib/postgresql/data

  volumeClaimTemplates:
  - metadata:
      name: pgdata
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
